tratando de que la pagina este en produccion

--- a/src/layouts/MainLayout.astro
+++ b/src/layouts/MainLayout.astro
@@ -1,8 +1,11 @@
+
 ---
-import Footer from '../components/Footer.jsx';
-import Navbar from '../components/Navbar.jsx';
-import '../styles/global.css';
+import Footer from '@/components/Footer.jsx';
+import Navbar from '@/components/Navbar.jsx';
+import '@/styles/global.css';
 ---
+
+
 
 <html lang="es">
   <head>
