--- a/src/layouts/MainLayout.astro
+++ b/src/layouts/MainLayout.astro
@@ -1,6 +1,6 @@
 ---
 import Footer from '@/components/Footer.jsx';
-
+import Navbar from '@/components/Navbar.jsx';
 import '@/styles/global.css';
 ---
 
@@ -12,7 +12,11 @@ import '@/styles/global.css';
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.5.1/css/all.min.css">
   </head>
   <body>
+    <Navbar client:load />
     
+    <main>
+      <slot />
+    </main>
     
     <Footer client:load />
   </body>
